// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with props accept stepped variation 1`] = `
<div>
  <div
    class="SteppedProgressBar base"
  >
    <progress
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="100"
      class="SteppedProgressBar base"
      max="100"
      value="100"
    >
      100
      %
    </progress>
    <progress
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="100"
      class="SteppedProgressBar base"
      max="100"
      value="100"
    >
      100
      %
    </progress>
    <progress
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="SteppedProgressBar base"
      max="100"
      value="0"
    >
      0
      %
    </progress>
  </div>
</div>
`;

exports[`with props accepts small size 1`] = `
<div>
  <progress
    class="ProgressBar small"
    max="3"
    value="2"
  >
    66.66666666666666
    %
  </progress>
</div>
`;

exports[`with props renders correctly 1`] = `
<div>
  <progress
    class="ProgressBar base"
    max="10"
    value="2"
  >
    20
    %
  </progress>
</div>
`;
